# geoserver-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-initialize-dockerized-python-mcp-server-scaffold.md  1-2-load-multi-instance-configuration-and-secret-references.md  1-3-implement-safe-geoserver-http-client-for-read-only-access.md  1-4-expose-check-instances-mcp-tool.md  1-5-enforce-read-only-mcp-safety-boundary.md  1-6-add-initial-docker-compose-geoserver-fixture.md  2-1-list-configured-instance-inventory-summary.md  2-2-list-workspaces-across-instances.md  2-3-list-stores-with-safe-metadata-redaction.md  2-4-list-layers-and-layer-groups.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-27.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
examples/: geoserver-mcp.env.example  geoserver-mcp.fixture.env.example  geoserver-mcp.fixture.yaml  geoserver-mcp.yaml
src/geoserver_mcp/: __init__.py  __main__.py  server.py
src/geoserver_mcp/config/: __init__.py  errors.py  (+3 more)
tests/integration/: test_check_instances_geoserver_fixture.py
tests/unit/: test_config_loader.py  test_geoserver_rest_client.py  test_instance_service.py  test_inventory_service.py  test_mcp_check_instances.py  test_mcp_list_catalog.py  test_read_only_safety.py  test_redaction.py  test_scaffold.py  test_secret_resolution.py
(+28 files in other folders)
