[project]
name = "geoserver-mcp"
version = "0.1.0"
description = "Dockerized MCP server for inspecting and managing GeoServer estates."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28,<1.0",
    "mcp>=1.27.1,<2.0.0",
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "pyyaml>=6.0.3,<7.0",
]

[project.scripts]
geoserver-mcp = "geoserver_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "respx>=0.22,<1.0",
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".agents",
    ".git",
    ".venv",
    "_bmad",
    "_bmad-output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
